--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -8,6 +8,7 @@
 	</head>
 	
 	<body>	
+        <input type="button" id="btnBuscar" value="buscar"/>
         <div id="devices">
         </div> 
     </body>    
