agregado boton buscar

--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -9,8 +9,9 @@
 	
 	<body>	
         <input type="button" id="btnBuscar" value="buscar"/>
-        <div id="devices">
-        </div> 
+        <input type="button" id="btnConectar" value="conectar"/>
+        <div id="devices"></div> 
+        <div id="mensajes"></div> 
     </body>    
     <script type="text/javascript" src="jquery-1.10.2.min.js"></script> 
 
