agregado boton enviar mensaje

--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -10,6 +10,7 @@
 	<body>	
         <input type="button" id="btnBuscar" value="buscar"/>
         <input type="button" id="btnConectar" value="conectar"/>
+        <input type="button" id="btnPrenderLed" value="toggleLed"/>
         <div id="devices"></div> 
         <div id="mensajes"></div> 
     </body>    
