--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -8,10 +8,9 @@
 	</head>
 	
 	<body>	
-        <input type="button" id="btnBuscar" value="buscar"/>
         <input type="button" id="btnConectar" value="conectar"/>
         <input type="button" id="btnSuscribirse" value="suscribirse"/>
-        <input type="button" id="btnPrenderLed" value="toggleLed"/>
+        <input type="button" id="btnPrenderLed" value="enviar puteada"/>
         <div id="devices"></div> 
         <div id="mensajes"></div> 
         <input type="text" id="knob" class="knob" data-angleoffset="90" data-linecap="round" value="0" style="width: 104px; height: 66px; position: absolute; vertical-align: middle; margin-top: 66px; margin-left: -152px; border: 0px; background-image: none; font-weight: bold; font-style: normal; font-variant: normal; font-size: 40px; line-height: normal; font-family: Arial; text-align: center; color: rgb(135, 206, 235); padding: 0px; -webkit-appearance: none; background-position: initial initial; background-repeat: initial initial;"/>
@@ -20,6 +19,7 @@
 
     <script type="text/javascript" src="PruebaBluetooth.js"></script> 
     <script type="text/javascript" src="jquery.knob.js"></script> 
+    <script type="text/javascript" src="ConectorArduinoBluetooth.js"></script> 
 
     <script type="text/javascript" src="phonegap.js"></script>
 </html>
