knobs html reciben angulo del arduino

--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -9,14 +9,16 @@
 	
 	<body>	
         <div id="status"></div> 
-        <input type="text" id="knob" class="knob" data-angleoffset="90" data-linecap="round" value="0" style="width: 104px; height: 66px; position: absolute; vertical-align: middle; margin-top: 66px; margin-left: -152px; border: 0px; background-image: none; font-weight: bold; font-style: normal; font-variant: normal; font-size: 40px; line-height: normal; font-family: Arial; text-align: center; color: rgb(135, 206, 235); padding: 0px; -webkit-appearance: none; background-position: initial initial; background-repeat: initial initial;"/>
+        <input type="text" id="knob1" class="knob"/>
+        <input type="text" id="knob2" class="knob"/>
     </body>    
     <script type="text/javascript" src="jquery-1.10.2.min.js"></script> 
 
     <script type="text/javascript" src="PruebaBluetooth.js"></script> 
     <script type="text/javascript" src="jquery.knob.js"></script> 
     <script type="text/javascript" src="ConectorArduinoBluetooth.js"></script> 
+    <script type="text/javascript" src="PanelDeMandosBT.js"></script> 
 
-    <script type="text/javascript" src="phonegap.js"></script>
+<!--    <script type="text/javascript" src="phonegap.js"></script>-->
 </html>
 
