knobs html reciben angulo del arduino

--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -19,6 +19,6 @@
     <script type="text/javascript" src="ConectorArduinoBluetooth.js"></script> 
     <script type="text/javascript" src="PanelDeMandosBT.js"></script> 
 
-<!--    <script type="text/javascript" src="phonegap.js"></script>-->
+    <script type="text/javascript" src="phonegap.js"></script>
 </html>
 
