incluido objeto vortex y filtro por ejemplo

--- a/PruebaBluetooth.html
+++ b/PruebaBluetooth.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="VortexJS/socket.io.js"></script>
     <script type="text/javascript" src="VortexJS/NodoConectorBluetooth.js"></script> 
     <script type="text/javascript" src="VortexJS/NodoAdaptadorBluetoothArduino.js"></script> 
+    <script type="text/javascript" src="VortexJS/Vortex.js"></script> 
     
     <script type="text/javascript" src="PruebaBluetooth.js"></script> 
     <script type="text/javascript" src="PanelDeMandosBT.js"></script> 
